--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
   </head>
   <body>
     <article>
+      <!--dodaje nagłówek główny tytuł-->
       <header><h1>Główny tytuł</h1></header>
+      <!--pierwszy paragraf-->
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
         aspernatur vitae maiores laudantium impedit debitis eligendi cumque
         voluptatem architecto explicabo.
       </p>
+      <!--Dodaje pierwszy podtytuł-->
       <header><h2>Podtytuł</h2></header>
+      <!--Drugi paragraf-->
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius non
         impedit vitae iure quasi inventore numquam, dolores corporis asperiores
         modi.
       </p>
+      <!--Dodaje drugi podtytuł-->
       <header><h2>Podtytuł</h2></header>
+      <!--Dodaje obrazek-->
       <img
         src="/bangkok-4864747_1920.jpg"
         alt="alternatywa"
